cmake_minimum_required(VERSION 3.8)
project(ros2-onevpl-video-package)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(cv_bridge REQUIRED)
find_package(image_transport REQUIRED)
find_package(OpenCV REQUIRED)
find_package(sensor_msgs REQUIRED)

# Include "include" directory
include_directories(
  include 
  ${OpenCV_INCLUDE_DIRS}
)

# Include "sample" directory
include_directories(sample)

# Create executable
add_executable(video-test-publisher src/video-test-publisher.cpp)
ament_target_dependencies(video-test-publisher
  "rclcpp"
  "cv_bridge"
  "sensor_msgs"
)
target_link_libraries(video-test-publisher
  ${OpenCV_LIBS}
)
# ament_target_dependencies(video-test-publisher rclcpp cv_bridge OpenCV)

# Install executables
install(TARGETS
  video-test-publisher
  DESTINATION lib/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
